# python-typescript-rust

./: .gitignore  Makefile  biome.json  notes.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
file-analysis/: Cargo.toml
file-analysis/src/: main.rs
infra/: lambda.tf  main.tf
leetcode/python/: pyproject.toml
leetcode/typescript/src/: main.ts
python/: pyproject.toml
python/src/: convert_to_parquet.py  main.py  read_from_parquet.py  read_from_s3.py  write_to_parquet.py
python/src/f1/: plot.py
python/src/videos/: stritch.py  vid.py
rust/: Cargo.toml
rust-lambda/: Cargo.toml
rust-lambda/src/: main.rs
rust-lambda/src/helper/: mod.rs  s3_utils.rs
rust/src/: main.rs
typescript/: package-lock.json  package.json
typescript/src/: main.ts  test.ts
wasm-calc/node-rust/: index.js  index.ts  package-lock.json  package.json
wasm-calc/rust-calc/: Cargo.toml
wasm-calc/rust-calc/src/: lib.rs
