[tool.poetry]
name = "anything"
version = "0.1.0"
description = ""
authors = ["Marko Uksanovic <marko.uksanovic1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.1.11"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.ruff]
line-length = 120
indent-width = 4
select = ['ALL']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
